release-data/changelogs/8.2/plugins/secret-management.adoc
= Changelogs for Rudder plugin secret-management 8.2.\* versions

== secret-management-8.2.9-1.1 (2025-09-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.7-1.1 (2025-06-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.6-1.1 (2025-05-07)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Secret plugin doesn't use the correct directory for configuration
    (https://issues.rudder.io/issues/26787[#26787])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.5-1.1 (2025-02-27)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.4-1.1 (2025-01-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.3-1.1 (2024-12-03)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.2-1.1 (2024-11-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.1-1.1 (2024-11-28)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.0-1.1 (2024-10-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.0.rc1-1.1 (2024-10-18)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.0.beta1-1.1 (2024-09-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.2.0.alpha1-1.1 (2024-09-09)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Fix UI problems in secrets management plugin following the Bootstrap 5 upgrade
    (https://issues.rudder.io/issues/24020[#24020])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

