release-data/changelogs/8.3/plugins/secret-management.adoc
= Changelogs for Rudder plugin secret-management 8.3.\* versions

== secret-management-8.3.12-1.1 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.11-1.1 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.10-1.1 (2026-04-01)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.9-1.1 (2026-02-16)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.8-1.1 (2025-12-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.7-1.1 (2025-12-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.6-1.1 (2025-11-19)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.5-1.1 (2025-10-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.4-1.1 (2025-09-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.2-1.1 (2025-06-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.1-1.1 (2025-05-07)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Secret plugin doesn't use the correct directory for configuration
    (https://issues.rudder.io/issues/26787[#26787])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.0-1.1 (2025-04-23)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.0.rc1-1.1 (2025-04-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.0.beta1-1.1 (2025-03-07)

=== Changes


==== Architecture - evolution

* Impact of #24872 (API rights) on private plugins
    (https://issues.rudder.io/issues/26398[#26398])

=== Bug fixes

==== Refactoring

* Fixed: Impact of Scala 3 - 26459 - private plugins
    (https://issues.rudder.io/issues/26461[#26461])

==== Packaging

* Fixed: Add a new requires_license field in the metadata in rudder-plugins-private
    (https://issues.rudder.io/issues/26360[#26360])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== secret-management-8.3.0.alpha1-1.1 (2025-01-23)

=== Changes


==== UI - UX

* Change main menu (private plugins)
    (https://issues.rudder.io/issues/26096[#26096])

=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

